fixed student comment writing still possible even though admin comment was not written first

--- a/src/app/student-page/student-page.component.html
+++ b/src/app/student-page/student-page.component.html
@@ -11,12 +11,12 @@
   </div>
   <div id="student-comments" [hidden]="isLoading">
     <div id="student-comments-header">Komentarai</div>
-    <div class="comment-missing-remark" [hidden]="comments && comments.length > 0">Komentarų nėra...</div>
+    <div class="comment-missing-remark" [hidden]="!isCommentsEmpty()">Komentarų nėra...</div>
     <div class="comment" *ngFor="let comment of comments ">
       <app-student-comment [comment]="comment"></app-student-comment>
     </div>
-    <app-admin-comment-write [hidden]="commentsEmpty()|| isLoading " (commentSave)="onCommentSaved($event)"></app-admin-comment-write>
-    <hr>
+    <hr [hidden]="isCommentsEmpty() || isLoading">
+    <app-admin-comment-write [hidden]="isCommentsEmpty() || isLoading" (commentSave)="onCommentSaved($event)"></app-admin-comment-write>
   </div>
 </div>
 
