--- a/src/app/admin-application-details/admin-application-details.component.html
+++ b/src/app/admin-application-details/admin-application-details.component.html
@@ -22,6 +22,13 @@
     <div class="comment" *ngFor="let comment of comments">
       <app-admin-comment *ngIf="!comment.visibleToApplicant" [comment]="comment" [isEditable]="isCommentEditable(comment.authorEmail)" (commentSave)="onCommentEdited($event)" (commentDelete)="onCommentDeleted($event)"></app-admin-comment>
     </div>
+    <mat-progress-spinner
+      class="spinner-styler"
+      color="primary"
+      *ngIf="isInternalCommentLoading"
+      mode="indeterminate"
+    >
+    </mat-progress-spinner>
     <hr>
     <app-admin-comment-write (commentSave)="onCommentSaved($event, true)"></app-admin-comment-write>
   </div>
@@ -31,6 +38,13 @@
     <div class="comment" *ngFor="let comment of comments">
       <app-admin-comment *ngIf="comment.visibleToApplicant" [comment]="comment" [isEditable]="false" (commentSave)="onCommentEdited($event)" (commentDelete)="onCommentDeleted($event)"></app-admin-comment>
     </div>
+    <mat-progress-spinner
+      class="spinner-styler"
+      color="primary"
+      *ngIf="isFeedbackCommentLoading"
+      mode="indeterminate"
+    >
+    </mat-progress-spinner>
     <hr>
     <app-admin-comment-write (commentSave)="onCommentSaved($event, false)"></app-admin-comment-write>
   </div>
