--- a/src/app/admin-application-details/admin-application-details.component.scss
+++ b/src/app/admin-application-details/admin-application-details.component.scss
@@ -23,7 +23,7 @@
 
 .admin-comments-header{
   font-size: 20px;
-  text-align: center;
+  text-align: left;
   margin-bottom: .75rem;
   margin-top: 1rem;
 }
@@ -77,5 +77,9 @@ hr{
   width: 100%;
   font-style: italic;
   color: grey;
+}
+.admin-comments-header-below{
+  color: grey;
+  font-size: 14px;
 }
 
