--- a/src/app/student-page/student-page.component.scss
+++ b/src/app/student-page/student-page.component.scss
@@ -23,7 +23,7 @@
 
 #student-comments-header{
   font-size: 20px;
-  text-align: center;
+  text-align: left;
   margin-bottom: .75rem;
   margin-top: 1rem;
 }
