feature IT10 implemented

--- a/src/app/registration/registration.component.html
+++ b/src/app/registration/registration.component.html
@@ -308,6 +308,18 @@
           Slaptažodžiai turi sutapti
         </div>
       </div>
+      <div class="form-group">
+        <div class="vertical-middle">
+          <mat-checkbox
+            labelPosition="after"
+            formControlName="GDPR"
+          ></mat-checkbox>
+          &nbsp;
+          <a href="https://academy-project-2020.herokuapp.com/gdpr" target="_blank">Sutinku,</a>
+          kad mano asmens duomenys (vardas, pavardė, telefono numeris, elektroninis paštas) būtų tvarkomi IT Akademijos
+          siekiant užtikrinti sklandų praktikos vykdymą.
+        </div>
+      </div>
       <span class="align-bottom mt-4 padding-bottom">
                 <p>{{ this.serverErrorMessage }}</p>
                 <mat-hint>Registruotis galėsite užpildę visus laukus</mat-hint>
