--- a/src/app/admin-application-details/admin-application-details.component.html
+++ b/src/app/admin-application-details/admin-application-details.component.html
@@ -31,7 +31,7 @@
     >
     </mat-progress-spinner>
     <hr>
-    <app-admin-comment-write (commentSave)="onCommentSaved($event, true)"></app-admin-comment-write>
+    <app-admin-comment-write [uploadEnabled]="false"  (commentSave)="onCommentSaved($event, true)"></app-admin-comment-write>
   </div>
   <div class="admin-comments" [hidden]="isLoading">
     <div class="admin-comments-header">Žinutė kandidatui</div>
@@ -47,7 +47,7 @@
     >
     </mat-progress-spinner>
     <hr>
-    <app-admin-comment-write (commentSave)="onCommentSaved($event, false)"></app-admin-comment-write>
+    <app-admin-comment-write [uploadEnabled]="true" (commentSave)="onCommentSaved($event, false)"></app-admin-comment-write>
   </div>
 </div>
 
