--- a/src/app/admin-comment-write/admin-comment-write.component.scss
+++ b/src/app/admin-comment-write/admin-comment-write.component.scss
@@ -32,3 +32,61 @@
   background: #b5c5e3;
   border-color: #a3b7dc;
 }
+.admin-comment-content-below{
+  display: flex;
+}
+.admin-comment-content-below div{
+  margin-top: .5rem;
+  display: flex;
+  flex-direction: row;
+}
+.admin-comment-content-below div div{
+  margin-top: 0;
+}
+@media only screen and (max-width: 1000px){
+  .admin-comment-content-below{
+    flex-direction: column;
+  }
+  .upload-file-wrapper{
+    margin: 0;
+  }
+}
+@media only screen and (min-width: 1001px){
+  .admin-comment-content-below{
+    flex-direction: row;
+    justify-content: space-between;
+  }
+  .upload-file-wrapper{
+    margin: 0 0.25rem 0 0;
+  }
+}
+.upload-file-wrapper{
+  border: lightgray solid 1px;
+  border-radius: 5px;
+  display: inline-block;
+  padding: 0.25rem;
+}
+#attachment {
+  width: 0.1px;
+  height: 0.1px;
+  opacity: 0;
+  overflow: hidden;
+  position: absolute;
+  z-index: -1;
+}
+#attachment + label {
+  font-size: 1em;
+  color: gray;
+  background-color: white;
+  margin: auto;
+  display: flex;
+  word-break: break-word;
+}
+#attachment + label div {
+  margin: auto 0;
+}
+
+#attachment:focus + label,
+#attachment + label:hover {
+  cursor: pointer;
+}
