feature IT17 implemented

--- a/src/app/applications/applications.component.html
+++ b/src/app/applications/applications.component.html
@@ -27,7 +27,7 @@
 
       <ng-container matColumnDef="fullName">
         <mat-header-cell *matHeaderCellDef mat-sort-header>Vardas Pavardė</mat-header-cell>
-        <mat-cell *matCellDef="let element" data-label="Vardas ir pavardė">{{ element.fullName }}</mat-cell>
+        <mat-cell *matCellDef="let element" data-label="Vardas ir pavardė" (click)="openApplication(element)">{{ element.fullName }}</mat-cell>
       </ng-container>
 
       <ng-container matColumnDef="applicationDate">
@@ -41,7 +41,7 @@
       </ng-container>
 
       <ng-container matColumnDef="action">
-        <mat-header-cell *matHeaderCellDef mat-sort-header>Daugiau</mat-header-cell>
+        <mat-header-cell *matHeaderCellDef ></mat-header-cell>
         <mat-cell *matCellDef="let element" data-label="Daugiau">
           <button><mat-icon (click)="openApplication(element)">launch</mat-icon></button>
         </mat-cell>
