--- a/src/app/registration/registration.component.html
+++ b/src/app/registration/registration.component.html
@@ -146,7 +146,9 @@
         </div>
       </div>
       <div class="form-group">
-        <label>Ar bus galimybė pasirašyti trišalę praktikos sutartį, jei ne pakomentuok plačiau</label>
+        <label>Ar bus galimybė pasirašyti trišalę praktikos sutartį, jei ne pakomentuok plačiau<span #tooltip="matTooltip"  matTooltip="Tai sutartis, kuri yra pasirašoma tarp tarp Tavęs, IT Akademijos ir trečiosios šalies: Tavo mokymo įstaigos (kai kurios ugdymo įstaigos trišales praktikos sutartis suteikia tik tam tikrais studijų metais)." class="material-icons">
+          contact_support
+          </span></label>
         <br/>
         <mat-radio-group aria-label="Select an option" formControlName="contract">
           <mat-radio-button value="true" [checked]="true" color="primary">Taip</mat-radio-button>
