--- a/src/app/admin-comment-write/admin-comment-write.component.html
+++ b/src/app/admin-comment-write/admin-comment-write.component.html
@@ -6,7 +6,10 @@
         <div>
           <div class="upload-file-wrapper" *ngIf="uploadEnabled">
             <input type="file" id="attachment" formControlName="attachment" (change)="onFileSelected($event)" accept=".pdf">
-            <label for="attachment"><mat-icon> insert_drive_file</mat-icon><div>{{fileSelected}}</div></label>
+            <label for="attachment">
+              <mat-icon> insert_drive_file</mat-icon>
+              <div>{{selectedFile ? selectedFile.name : fileSelectedDefaultName}}</div>
+            </label>
           </div>
         </div>
         <button type='submit' [disabled]="!commentForm.valid">Išsaugoti</button>
