--- a/src/app/admin-comment/admin-comment.component.html
+++ b/src/app/admin-comment/admin-comment.component.html
@@ -20,4 +20,7 @@
       </form>
     </div>
   </div>
+  <div class="admin-comment-content" *ngIf="comment.attachmentName" (click)="onDownload()">
+    download attachment
+  </div>
 </div>
