--- a/src/app/student-comment/student-comment.component.html
+++ b/src/app/student-comment/student-comment.component.html
@@ -4,4 +4,7 @@
         <div id="student-comment-date">{{ comment.commentDate | date: 'yyyy-MM-dd' }}</div>
     </div>
     <div class="student-comment-content">{{ comment.comment }}</div>
+    <div class="student-comment-content" *ngIf="comment.attachmentName" (click)="onDownload()">
+      download attachment
+    </div>
 </div>
