styling attachment download section

--- a/src/app/admin-comment/admin-comment.component.scss
+++ b/src/app/admin-comment/admin-comment.component.scss
@@ -54,4 +54,16 @@
   display: flex;
   flex-direction: row;
 }
+.attachment-download {
+  word-break: break-word;
+  display: flex;
+  flex-direction: row;
+  color: grey;
+  cursor: pointer;
+  border-top: solid #d6d6d6 1px;
+}
+.attachment-download div {
+  margin-left: .5rem;
+  align-self: center;
+}
 
