--- a/src/app/admin-comment/admin-comment.component.html
+++ b/src/app/admin-comment/admin-comment.component.html
@@ -20,7 +20,8 @@
       </form>
     </div>
   </div>
-  <div class="admin-comment-content" *ngIf="comment.attachmentName" (click)="onDownload()">
-    download attachment
+  <div class="admin-comment-content attachment-download" *ngIf="comment.attachmentName" (click)="onDownload()">
+    <mat-icon>cloud_download</mat-icon>
+    <div>{{comment.attachmentName}}</div>
   </div>
 </div>
