--- a/src/app/admin-comment-write/admin-comment-write.component.html
+++ b/src/app/admin-comment-write/admin-comment-write.component.html
@@ -2,7 +2,18 @@
   <form [formGroup]="commentForm" (ngSubmit)="onCommentSaved(); commentForm.reset()">
     <div class="admin-comment-content">
       <textarea maxlength="1500" formControlName="commentBody" placeholder="Naujas komentaras..."></textarea>
-      <button type='submit' [disabled]="!commentForm.valid">Išsaugoti</button>
+      <div class="admin-comment-content-below">
+        <div>
+          <div class="upload-file-wrapper" *ngIf="uploadEnabled">
+            <input type="file" id="attachment" formControlName="attachment" (change)="onFileSelected($event)" accept=".pdf, .doc">
+            <label for="attachment">
+              <mat-icon> insert_drive_file</mat-icon>
+              <div>{{selectedFile ? selectedFile.name : fileSelectedDefaultName}}</div>
+            </label>
+          </div>
+        </div>
+        <button type='submit' [disabled]="!commentForm.valid">Išsaugoti</button>
+      </div>
     </div>
   </form>
 </div>
