--- a/src/app/applications/applications.component.scss
+++ b/src/app/applications/applications.component.scss
@@ -120,6 +120,9 @@ button {
   cursor:pointer;
   overflow: hidden;
   outline:none;
+  width: 100%;
+  height: 100%;
+  text-align: left;
 }
 
 .status-null, .status-passed, .status-declined, .status-possible, .status-seen, .status-new{
