--- a/src/app/student-comment/student-comment.component.scss
+++ b/src/app/student-comment/student-comment.component.scss
@@ -15,7 +15,6 @@
     padding: .375rem .75rem;
   }
 .attachment-download {
-  word-break: break-word;
   display: flex;
   flex-direction: row;
   color: grey;
@@ -23,6 +22,9 @@
   border-top: solid #d6d6d6 1px;
 }
 .attachment-download div {
-  margin-left: .5rem;
-  align-self: center;
+  margin: auto 0 auto .5rem;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+  display: inline;
 }
