--- a/src/app/registration/registration.component.scss
+++ b/src/app/registration/registration.component.scss
@@ -67,7 +67,7 @@ body {
   .login-wrapper .example-form {
     min-width: 100%;
     max-width: 100vw;
-    width: 100%;
+    width: 100vw;
   }
 
 
@@ -199,7 +199,7 @@ body {
   position: sticky;
   top: 0;
  text-align: left;
- margin: -10px -20px;
+ margin: -20px -14px;
 }
 
 
@@ -232,4 +232,10 @@ vertical-middle{
 .sticky{
   position: sticky;
   bottom: 0;
+}
+.stickytop{
+  position: fixed;
+}
+.test{
+  position: fixed;
 }
