--- a/src/app/applications/applications.component.html
+++ b/src/app/applications/applications.component.html
@@ -1,6 +1,7 @@
 <div class="mx-auto container-padding ">
   <div>
-    <mat-table [dataSource]="dataSource" matSort matSortActive="applicationDate" matSortDirection="desc"  class="mat-elevation-z8">
+    <mat-table [dataSource]="dataSource" matSort matSortActive="applicationDate" matSortDirection="desc"
+               class="mat-elevation-z8">
       <ng-container matColumnDef="status">
         <mat-header-cell *matHeaderCellDef mat-sort-header>Statusas</mat-header-cell>
         <mat-cell *matCellDef="let element" data-label="Statusas">
@@ -37,13 +38,21 @@
 
       <ng-container matColumnDef="commentCount">
         <mat-header-cell *matHeaderCellDef mat-sort-header>Komentarų skaičius</mat-header-cell>
-        <mat-cell *matCellDef="let element" data-label="Komentarų skaičius">{{ element.commentCount }}</mat-cell>
+        <mat-cell *matCellDef="let element" data-label="Komentarų skaičius">
+          <i *ngIf="!element.newInternalComment||sameAuthor(element.lastInternalCommentAuthor)" class="empty-padding-dialog"></i>
+          <i *ngIf="!element.newExternalComment||sameAuthor(element.lastExternalCommentAuthor)" class="empty-padding-envelope"></i>
+          <i class="fas fa-comment icon-padding-dialog" *ngIf="element.newInternalComment&&!sameAuthor(element.lastInternalCommentAuthor)"></i>
+          <i class="fas fa-envelope icon-padding-envelope" *ngIf="element.newExternalComment&&!sameAuthor(element.lastExternalCommentAuthor)"></i>
+          {{ element.commentCount }}
+        </mat-cell>
       </ng-container>
 
       <ng-container matColumnDef="action">
-        <mat-header-cell *matHeaderCellDef ></mat-header-cell>
+        <mat-header-cell *matHeaderCellDef></mat-header-cell>
         <mat-cell *matCellDef="let element" data-label="Daugiau">
-          <button><mat-icon (click)="openApplication(element)">launch</mat-icon></button>
+          <button>
+            <mat-icon (click)="openApplication(element)">launch</mat-icon>
+          </button>
         </mat-cell>
       </ng-container>
       <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
@@ -51,9 +60,9 @@
     </mat-table>
   </div>
 
-    <mat-card *ngIf="isLoading" style="display: flex; justify-content: center; align-items: center">
-        <mat-progress-spinner color="primary" mode="indeterminate"> </mat-progress-spinner>
-    </mat-card>
+  <mat-card *ngIf="isLoading" style="display: flex; justify-content: center; align-items: center">
+    <mat-progress-spinner color="primary" mode="indeterminate"></mat-progress-spinner>
+  </mat-card>
 
-    <mat-paginator [length]="100" [pageSize]="10" [pageSizeOptions]="[5, 10, 25, 100]"> </mat-paginator>
+  <mat-paginator [length]="100" [pageSize]="10" [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator>
 </div>
