--- a/src/app/admin-comment-write/admin-comment-write.component.html
+++ b/src/app/admin-comment-write/admin-comment-write.component.html
@@ -14,6 +14,9 @@
         </div>
         <button type='submit' [disabled]="!commentForm.valid">Išsaugoti</button>
       </div>
+      <div *ngIf="uploadEnabled && !commentForm.controls.attachment.valid" class="alert alert-danger">
+        {{commentForm.controls.attachment.errors.message}}
+      </div>
     </div>
   </form>
 </div>
