--- a/src/app/admin-comment-write/admin-comment-write.component.scss
+++ b/src/app/admin-comment-write/admin-comment-write.component.scss
@@ -7,6 +7,11 @@
   display: flex;
   flex-direction: column;
 }
+.alert-danger{
+  margin-top: .5rem;
+  margin-buttom: 0;
+  padding: .375rem 0.75rem;
+}
 .admin-comment-content textarea{
   border-radius: 5px;
   padding: .75rem .75rem;
