--- a/src/app/student-page/student-page.component.scss
+++ b/src/app/student-page/student-page.component.scss
@@ -72,3 +72,13 @@ hr{
   font-style: italic;
   color: grey;
 }
+
+.show-more{
+  background: #6486C4;
+  height: 40px;
+  border-radius: 5px;
+  color: #fff;
+  border-color: #5D7EB8;
+  width: 13vw;
+  min-width: 150px;
+}
